--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint . --ext ts --ext tsx --ext js --fix"
   },
   "dependencies": {
     "@chakra-ui/react": "^1.7.2",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@typescript-eslint/eslint-plugin": "^5.5.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
     "framer-motion": "^4",
     "next": "12.0.4",
     "react": "17.0.2",
