--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@typescript-eslint/eslint-plugin": "^5.5.0",
+    "axios": "^0.24.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "framer-motion": "^4",
     "next": "12.0.4",
