--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "framer-motion": "^4",
     "next": "12.0.4",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-feather": "^2.0.9"
   },
   "devDependencies": {
     "@types/node": "16.11.10",
