--- a/package.json
+++ b/package.json
@@ -27,5 +27,6 @@
     "eslint": "7",
     "eslint-config-next": "12.0.4",
     "typescript": "4.5.2"
-  }
+  },
+  "proxy": "http://localhost:3000"
 }
