--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11",
     "@typescript-eslint/eslint-plugin": "^5.5.0",
     "axios": "^0.24.0",
+    "cities.json": "^1.1.5",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "framer-motion": "^4",
     "next": "12.0.4",
