--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@typescript-eslint/eslint-plugin": "^5.5.0",
+    "apexcharts": "^3.31.0",
     "axios": "^0.24.0",
     "cities.json": "^1.1.5",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "framer-motion": "^4",
     "next": "12.0.4",
     "react": "17.0.2",
+    "react-apexcharts": "^1.3.9",
     "react-dom": "17.0.2",
     "react-feather": "^2.0.9"
   },
