feat: add default font for the app and update headings in SearchForecastView component

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@chakra-ui/react": "^1.7.2",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@fontsource/montserrat": "^4.5.1",
     "@typescript-eslint/eslint-plugin": "^5.5.0",
     "axios": "^0.24.0",
     "chart.js": "^3.6.1",
