--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint . --ext ts --ext tsx --ext js --fix"
+    "lint": "eslint . --ext ts --ext tsx --ext js --fix",
+    "test": "jest --watch",
+    "coverage": "jest --bail --ci --coverage --runInBand"
   },
   "dependencies": {
     "@chakra-ui/react": "^1.7.2",
@@ -25,10 +27,14 @@
     "react-feather": "^2.0.9"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.15.1",
+    "@testing-library/react": "^12.1.2",
     "@types/node": "16.11.10",
     "@types/react": "17.0.37",
+    "babel-jest": "^27.4.2",
     "eslint": "7",
     "eslint-config-next": "12.0.4",
+    "jest": "^27.4.3",
     "typescript": "4.5.2"
   },
   "proxy": "http://localhost:3000"
