--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cities.json": "^1.1.5",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "framer-motion": "^4",
+    "jest-date-mock": "^1.0.8",
     "next": "12.0.4",
     "react": "17.0.2",
     "react-chartjs-2": "^4.0.0",
