--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,8 @@
     "baseUrl": ".",
     "paths": {
       "test-utils": ["./tests/test-utils.tsx"]
-    }
+    },
+    "sourceMap": true
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
